review follow-up on models

--- a/articles/er-evaluation-models/er-related-work.bib
+++ b/articles/er-evaluation-models/er-related-work.bib
@@ -17,6 +17,23 @@ volume = {64},
 pages = {1183-1210}
 }
 
+@article{tancredi2011fsmcrit,
+  title={A hierarchical Bayesian approach to record linkage and population size problems},
+  author={Tancredi, Andrea and Liseo, Brunero},
+  year={2011}
+}
+
+@article{winkler2014matching,
+  title={Matching and record linkage},
+  author={Winkler, William E},
+  journal={Wiley interdisciplinary reviews: Computational statistics},
+  volume={6},
+  number={5},
+  pages={313--325},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
 @techreport{winkler1990,
   title={String comparator metrics and enhanced decision rules in the Fellegi-Sunter model of record linkage.},
   author={Winkler, William E},
@@ -24,6 +41,22 @@ pages = {1183-1210}
   institution={ERIC}
 }
 
+@article{sad2013genfsm,
+  title={A generalized Fellegi--Sunter framework for multiple record linkage with application to homicide record systems},
+  author={Sadinle, Mauricio and Fienberg, Stephen E},
+  journal={Journal of the American Statistical Association},
+  volume={108},
+  number={502},
+  pages={385--397},
+  year={2013},
+  publisher={Taylor \& Francis}
+}
+
+@article{sad2014fsmdup,
+  title={Detecting duplicates in a homicide registry using a Bayesian partitioning approach},
+  author={Sadinle, Mauricio},
+  year={2014}
+}
 @book{Tal11,
   title={Entity resolution and information quality},
   author={Talburt, John R},
