--- a/articles/er-evaluation-models/formalization.tex
+++ b/articles/er-evaluation-models/formalization.tex
@@ -99,7 +99,9 @@ theoretical model, we can define the output domain of entity resolution
 \]
 
 \noindent
-as the domain of collections of entity profiles.
+as the domain of collections of entity profiles, where \textit{P} represents the
+domain of entity profiles.
+The domain of entity profiles is specified for each entity resolution model.
 
 This specification, finally, allows us to formalize entity resolution itself as a function:
 
