--- a/articles/er-evaluation-models/er-general.bib
+++ b/articles/er-evaluation-models/er-general.bib
@@ -79,6 +79,20 @@
   publisher={Wiley Online Library}
 }
 
+@article{newcombe1959,
+ ISSN = {00368075, 10959203},
+ URL = {http://www.jstor.org/stable/1756667},
+ author = {H. B. Newcombe and J. M. Kennedy and S. J. Axford and A. P. James},
+ journal = {Science},
+ number = {3381},
+ pages = {954--959},
+ publisher = {American Association for the Advancement of Science},
+ title = {Automatic Linkage of Vital Records},
+ urldate = {2024-01-28},
+ volume = {130},
+ year = {1959}
+}
+
 @book{hoffman1971linear,
   title={Linear algebra},
   author={Hoffman, Kenneth},
