Corrections on related & future work

--- a/articles/er-evaluation-models/er-related-work.bib
+++ b/articles/er-evaluation-models/er-related-work.bib
@@ -34,6 +34,13 @@ pages = {1183-1210}
   publisher={Wiley Online Library}
 }
 
+@article{wang2022realideal,
+  title={Bridging the gap between reality and ideality of entity matching: A revisiting and benchmark re-construction},
+  author={Wang, Tianshu and Lin, Hongyu and Fu, Cheng and Han, Xianpei and Sun, Le and Xiong, Feiyu and Chen, Hui and Lu, Minlong and Zhu, Xiuwen},
+  journal={arXiv preprint arXiv:2205.05889},
+  year={2022}
+}
+
 @techreport{winkler1990,
   title={String comparator metrics and enhanced decision rules in the Fellegi-Sunter model of record linkage.},
   author={Winkler, William E},
@@ -163,6 +170,21 @@ publisher={The Australian National University}
   journal={University of Maryland, Tech. Rep.},
   year={2012}
 }
+
+@article{barnes2015practioner,
+  title={A Practioner's Guide to Evaluating Entity Resolution Results},
+  author={Barnes, Matt},
+  journal={arXiv preprint arXiv:1509.04238},
+  year={2015}
+}
+
+@article{graf2021frost,
+  title={Frost: a platform for benchmarking and exploring data matching results},
+  author={Graf, Martin and Laskowski, Lukas and Papsdorf, Florian and Sold, Florian and Gremmelspacher, Roland and Naumann, Felix and Panse, Fabian},
+  journal={arXiv preprint arXiv:2107.10590},
+  year={2021}
+}
+
 
 @article{rand1971,
   title={Objective criteria for the evaluation of clustering methods},
