--- a/articles/er-evaluation-models/research-questions.tex
+++ b/articles/er-evaluation-models/research-questions.tex
@@ -31,7 +31,8 @@ On the other hand, as humans we judge the quality of the entity resolution
 task's result in relation to the real-world information available to us, which
 usually includes the real-world object itself.
 This produces a gap between what a computer can provide and what the
-observer wishes to see.
+observer wishes to see, a gap which is starting to garner some
+attention~\cite{wang2022realideal}.
 
 And so, it is said that beauty lies in the eye of the beholder and we are
 nearing a century since it has become apparent that the observer is key in
